tests/ui/attributes/attr-eq-token-tree.stderr
error: expected expression, found `]`
  --> $DIR/attr-eq-token-tree.rs:1:14
   |
LL | #[my_attr = !]
   |              ^ expected expression

error: aborting due to 1 previous error

