tests/ui/attributes/attr-eq-token-tree.rs
#[my_attr = !] //~ ERROR expected expression, found `]`
fn main() {}
